// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for /thai/23122810 For the AMP platform I can see the server-rendered HTML 1`] = `
<html lang="th"
      dir="ltr"
      amp
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News ไทย"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News ไทย"
    >
    <meta data-react-helmet="true"
          name="description"
          content="Summary text about our interview with an American"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="Summary text about our interview with an American"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="http://ichef.test.bbci.co.uk/news/1024/branded_thai/F3F5/test/_63535426_p019wch0.jpg"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="summary text"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="th-TH"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News ไทย"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="We do not know the length of it - BBC News ไทย"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/thai/23122810"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbc_thailand"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="Summary text about our interview with an American"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="summary text"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="http://ichef.test.bbci.co.uk/news/1024/branded_thai/F3F5/test/_63535426_p019wch0.jpg"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbc_thailand"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="We do not know the length of it - BBC News ไทย"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2017-05-04T13:21:23.000Z"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2017-05-04T13:21:23.000Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      We do not know the length of it - BBC News ไทย
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/thai/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/thai/23122810"
    >
    <link data-react-helmet="true"
          rel="alternate"
          href="http://localhost:7080/thai/23122810"
          hreflang="th"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/thai/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            async
            custom-element="amp-bind"
            src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    >
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/thai/23122810","publisher":{"@type":"NewsMediaOrganization","name":"BBC News ไทย","publishingPrinciples":"https://www.bbc.com/thai/institutional-49281839","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/thai.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/thai.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/thai.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/thai/23122810","name":"We do not know the length of it"},"headline":"We do not know the length of it","datePublished":"2017-05-04T13:21:23.000Z","dateModified":"2017-05-04T13:21:23.000Z","author":{"@type":"NewsMediaOrganization","name":"BBC News ไทย","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/thai.png"},"noBylinesPolicy":"https://www.bbc.com/thai/institutional-49281839#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"AudioObject","name":"short headline","description":"long headline","duration":null,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg","uploadDate":"1970-01-01T00:00:00.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/cps/thai/23122810/p019wcgf/th/amp"}
    </script>
    <script data-react-helmet="true"
            async
            custom-element="amp-iframe"
            src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    >
    </script>
    <style amp-boilerplate>
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style amp-boilerplate>
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script async
            src="https://cdn.ampproject.org/v0.js"
    >
    </script>
    <script async
            custom-element="amp-geo"
            src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-consent"
            src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-analytics"
            src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    >
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="AmpConsentWrapper-sc-18egs7-0 bfTTJR">
          <amp-geo layout="nodisplay">
            <script type="application/json">
              {"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"]}}
            </script>
          </amp-geo>
          <amp-consent id="consent"
                       layout="nodisplay"
          >
            <script type="application/json">
              {"consents":{"user-consent":{"promptIfUnknownForGeoGroup":"eea","promptUI":"consent-prompt"}}}
            </script>
            <div id="consent-prompt">
              <div dir="ltr"
                   id="privacy"
                   class="Wrapper-sc-7g3fro-0 cNzHxi"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 fdoQdE"
                  >
                    เราได้ปรับปรุงนโยบายเกี่ยวกับความเป็นส่วนตัวและคุกกีส์แล้ว
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 keksKX"
                  >
                    เราได้แก้ไขข้อมูลที่สำคัญของนโยบายเกี่ยวกับความเป็นส่วนตัวและคุกกีส์ และเราต้องการให้คุณทราบถึง ผลกระทบต่อตัวคุณและข้อมูลของคุณ
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iOCwEu"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 hUEPzt"
                    >
                      <button type="button"
                              on="tap:cookie.show, privacy.hide"
                      >
                        ตกลง
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 hUEPzt"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
                         on="tap:cookie.show, privacy.hide"
                      >
                        ดูว่ามีอะไรเปลี่ยนแปลงไปบ้าง
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div dir="ltr"
                   hidden
                   id="cookie"
                   class="Wrapper-sc-7g3fro-0 cNzHxi"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 fdoQdE"
                  >
                    กรุณาแจ้งให้เราทราบว่า คุณยอมรับคุกกีส์
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 keksKX"
                  >
                    เราใช้
                    <a href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/">
                      คุกกีส์
                    </a>
                    เพื่อให้คุณได้รับประสบการณ์ที่ดีที่สุดในโลกออนไลน์ กรุณาแจ้งให้เราทราบว่า คุณยอมรับคุกกีส์ทั้งหมดนี้
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iOCwEu"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 hUEPzt"
                    >
                      <button type="button"
                              on="tap:consent.accept"
                              data-cookie-banner="accept"
                      >
                        ยอมรับ
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 hUEPzt"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                         on="tap:consent.reject"
                         data-cookie-banner="reject"
                      >
                        ไม่ยอมรับ ไปที่การตั้งค่า
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </amp-consent>
        </div>
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/thai"
               class="StyledLink-m3awbo-2 fRVPol"
            >
              <svg height="24"
                   viewbox="0 0 210 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fkvflj"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M186.72 2.18v11a1.69 1.69 0 0 1 .47-.05 1.6 1.6 0 0 1 1.16.46 1.53 1.53 0 0 1 .48 1.14 1.56 1.56 0 0 1-.41 1.1 1.6 1.6 0 0 1-1.07.51 1.36 1.36 0 0 1-.35 0 1.65 1.65 0 0 1-1.29-.55 2 2 0 0 1-.53-1.4V2.18a2.38 2.38 0 0 0-.08-.44.42.42 0 0 0-.3-.14q-.22 0-.47.4a6.07 6.07 0 0 0-.58 1.22l-.18.5h-.92a3.16 3.16 0 0 0-.38-1.46 1.27 1.27 0 0 0-.94-.66l.52-1.36a1.22 1.22 0 0 1 .88.61 3.59 3.59 0 0 1 .45 1.39 4.66 4.66 0 0 1 .65-1.11 1.56 1.56 0 0 1 1-.71h.37a1.41 1.41 0 0 1 1.17.56 2 2 0 0 1 .35 1.2zm1.19 12.58a.68.68 0 0 0-.22-.51.71.71 0 0 0-.51-.21.68.68 0 0 0-.5.21.69.69 0 0 0-.21.5.7.7 0 0 0 .21.51.67.67 0 0 0 .5.22.7.7 0 0 0 .51-.21.69.69 0 0 0 .22-.51zM191.67 10h-.51a1.51 1.51 0 0 1-1.16-.45 1.55 1.55 0 0 1-.46-1.13 1.74 1.74 0 0 1 .33-1 1.25 1.25 0 0 1 .87-.59h.55a1.78 1.78 0 0 1 1.41.57 2 2 0 0 1 .47 1.36v2.15l-.17 1.34.24-.79q0-.16.43-1.12a11.19 11.19 0 0 1 1.48-2.79 3.32 3.32 0 0 1 .55-.55 1.14 1.14 0 0 1 .7-.19 2 2 0 0 1 1.59.68 2.39 2.39 0 0 1 .58 1.65v7.16H197V9q0-.77-.69-.75-.35 0-1.09 1.5a19.71 19.71 0 0 0-.82 1.87 23 23 0 0 0-1 3.73 8.65 8.65 0 0 0-.16 1h-1.55zm-1.21-1.55a.68.68 0 0 0 .21.49.67.67 0 0 0 .49.22.72.72 0 0 0 .51-.21.66.66 0 0 0 .22-.5.7.7 0 0 0-.21-.52.72.72 0 0 0-.52-.21.66.66 0 0 0-.5.22.72.72 0 0 0-.19.48zM206.32 15.08a.6.6 0 0 0 .51-.24.89.89 0 0 0 .16-.56V6.89h1.57v7.63a1.92 1.92 0 0 1-.37 1.19 1.71 1.71 0 0 1-1.45.55h-5.86v-1.18h.63v-1.59a2.34 2.34 0 0 1 .37-1.4 1.65 1.65 0 0 1 1.08-.71 2.17 2.17 0 0 1-1.56-.57 2 2 0 0 1-.6-1.53 2.3 2.3 0 0 1 .91-1.92 3.33 3.33 0 0 1 2.08-.63 2.08 2.08 0 0 1 1.35.42 1.57 1.57 0 0 1 .55 1.28 1.43 1.43 0 0 1-.64 1.31 1.74 1.74 0 0 1-.94.26 1.36 1.36 0 0 1-1.46-.84 1.54 1.54 0 0 1-.1-.55 1.05 1.05 0 0 1 0-.37q-.21 0-.37.35a1.18 1.18 0 0 0-.14.52q0 1.38 1.63 1.61a7.29 7.29 0 0 0 1.06.08h.69v1.07h-.73a1.68 1.68 0 0 0-1.14.34 1.57 1.57 0 0 0-.49 1.23v1.65zm-3-6.64a.67.67 0 0 0 .22.51.72.72 0 0 0 1 0 .68.68 0 0 0 .22-.5.63.63 0 0 0-.73-.71.72.72 0 0 0-.51.21.67.67 0 0 0-.15.49z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                ไทย
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 icaRnC"
            >
              ข้ามไปยังเนื้อหา
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             id="si-nav"
             class="StyledNav-sc-158x7z5-5 jTxPjl"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <amp-state id="menuState">
              <script type="application/json">
                {"expanded":false}
              </script>
            </amp-state>
            <button type="button"
                    aria-expanded="false"
                    data-amp-bind-aria-expanded="menuState.expanded ? &quot;true&quot; : &quot;false&quot;"
                    on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
                    dir="ltr"
                    class="MenuButton-ukxuly-6 kFmrTl"
            >
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   data-amp-bind-hidden="menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                </path>
              </svg>
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   hidden
                   data-amp-bind-hidden="!menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                      fill-rule="evenodd"
                >
                </path>
              </svg>
              <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                หมวดข่าว
              </span>
            </button>
            <div id="si-nav-dropdown-menu"
                 hidden
                 class="AmpDropdown-ukxuly-1 dMLYwY"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    หน้าแรก
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/topics/1ed75fd4-f992-46db-9859-fb5a7c95da91"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    ประเทศไทย
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/international"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    ต่างประเทศ
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    วิทยาศาสตร์
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    สุขภาพ
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/media/video"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    วิดีโอ
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/popular/read"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    ยอดนิยม
                  </a>
                </li>
              </ul>
            </div>
            <div dir="ltr"
                 id="si-nav-scrollable"
                 class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz StyledAmpScrollableNavigation-thcau0-0 eHufvQ"
            >
              <ul role="list"
                  class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
              >
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/thai"
                     class="StyledLink-sc-158x7z5-2 gizuhH"
                  >
                    หน้าแรก
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/thai/topics/1ed75fd4-f992-46db-9859-fb5a7c95da91"
                     class="StyledLink-sc-158x7z5-2 gizuhH"
                  >
                    ประเทศไทย
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/thai/international"
                     class="StyledLink-sc-158x7z5-2 gizuhH"
                  >
                    ต่างประเทศ
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/thai/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                     class="StyledLink-sc-158x7z5-2 gizuhH"
                  >
                    วิทยาศาสตร์
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/thai/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2"
                     class="StyledLink-sc-158x7z5-2 gizuhH"
                  >
                    สุขภาพ
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/thai/media/video"
                     class="StyledLink-sc-158x7z5-2 gizuhH"
                  >
                    วิดีโอ
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/thai/popular/read"
                     class="StyledLink-sc-158x7z5-2 gizuhH"
                  >
                    ยอดนิยม
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <amp-analytics type="chartbeat">
        <script type="application/json">
          {"vars":{"domain":"test.bbc.co.uk","sections":"Thai, Thai - หน้าแรก, Thai - MAP, Thai - หน้าแรก - MAP, Thai - undefined-category","uid":50924,"title":"We do not know the length of it","virtualReferrer":"\${documentReferrer}","contentType":"article-media-asset"}}
        </script>
      </amp-analytics>
      <amp-analytics>
        <script type="application/json">
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"base":"https://logws1363.ati-host.net?","pageview":"\${base}s=598343&s2=90&p=thai.media_asset.23122810.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:cps:98300274-552b-364d-863b-e123d2236878]&x2=[amp]&x3=[news-thai]&x4=[th]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article-media-asset]&x8=[simorgh]&x9=[We+do+not+know+the+length+of+it+-+BBC+News+ไทย]&x11=[2017-05-04T13:21:23.000Z]&x12=[2017-05-04T13:21:23.000Z]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <main role="main"
            class="GridWrapper-sc-12lwanc-0 StyledGrid-oo43dv-0 jHslwF"
      >
        <h1 id="content"
            tabindex="-1"
            class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
        >
          We do not know the length of it
        </h1>
        <div class="GridItemConstrainedLarge-sc-12lwanc-4 Wrapper-sc-7tc6v2-0 kvwPKI">
          <figure class="Figure-sc-6a3dhy-0 gJUCFc">
            <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
              <amp-iframe sandbox="allow-scripts allow-same-origin"
                          layout="fill"
                          scrolling="no"
                          frameborder="0"
                          src="https://polling.test.bbc.co.uk/ws/av-embeds/cps/thai/23122810/p019wcgf/th/amp"
                          title="มีเดีย เพลเยอร์"
                          allowfullscreen="allowfullscreen"
              >
                <amp-img srcset="https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 800w"
                         layout="fill"
                         src="https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg"
                         placeholder="true"
                         alt
                         height="16"
                         width="9"
                         attribution
                >
                </amp-img>
                <noscript>
                  <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                    <img srcset="https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 800w"
                         alt
                         src="https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg"
                         aria-hidden="true"
                         class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    >
                    <div class="MessageWrapper-sc-1pnftlt-1 dCjMrs">
                      <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                        อุปกรณ์ของท่านไม่สามารถใช้งานเครื่องเล่นสื่อได้
                      </strong>
                    </div>
                  </div>
                </noscript>
              </amp-iframe>
            </div>
          </figure>
        </div>
        <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
          <strong aria-hidden="true"
                  class="Headline-sc-1kh1qhu-0 denghk StyledFauxHeadline-sc-15zvetq-0 jJBkMr"
          >
            We do not know the length of it
          </strong>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi StyledTimestamp-oo43dv-1 jqCfrG">
          <time datetime="2017-05-04"
                class="StyledTimestamp-um718p-0 eUpvhV"
          >
            4 พฤษภาคม 2017
          </time>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 jjizJv">
            Plain Text Paragraph
          </p>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/thai"
               class="StyledLink-m3awbo-2 fRVPol"
            >
              <svg height="24"
                   viewbox="0 0 210 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fkvflj"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M186.72 2.18v11a1.69 1.69 0 0 1 .47-.05 1.6 1.6 0 0 1 1.16.46 1.53 1.53 0 0 1 .48 1.14 1.56 1.56 0 0 1-.41 1.1 1.6 1.6 0 0 1-1.07.51 1.36 1.36 0 0 1-.35 0 1.65 1.65 0 0 1-1.29-.55 2 2 0 0 1-.53-1.4V2.18a2.38 2.38 0 0 0-.08-.44.42.42 0 0 0-.3-.14q-.22 0-.47.4a6.07 6.07 0 0 0-.58 1.22l-.18.5h-.92a3.16 3.16 0 0 0-.38-1.46 1.27 1.27 0 0 0-.94-.66l.52-1.36a1.22 1.22 0 0 1 .88.61 3.59 3.59 0 0 1 .45 1.39 4.66 4.66 0 0 1 .65-1.11 1.56 1.56 0 0 1 1-.71h.37a1.41 1.41 0 0 1 1.17.56 2 2 0 0 1 .35 1.2zm1.19 12.58a.68.68 0 0 0-.22-.51.71.71 0 0 0-.51-.21.68.68 0 0 0-.5.21.69.69 0 0 0-.21.5.7.7 0 0 0 .21.51.67.67 0 0 0 .5.22.7.7 0 0 0 .51-.21.69.69 0 0 0 .22-.51zM191.67 10h-.51a1.51 1.51 0 0 1-1.16-.45 1.55 1.55 0 0 1-.46-1.13 1.74 1.74 0 0 1 .33-1 1.25 1.25 0 0 1 .87-.59h.55a1.78 1.78 0 0 1 1.41.57 2 2 0 0 1 .47 1.36v2.15l-.17 1.34.24-.79q0-.16.43-1.12a11.19 11.19 0 0 1 1.48-2.79 3.32 3.32 0 0 1 .55-.55 1.14 1.14 0 0 1 .7-.19 2 2 0 0 1 1.59.68 2.39 2.39 0 0 1 .58 1.65v7.16H197V9q0-.77-.69-.75-.35 0-1.09 1.5a19.71 19.71 0 0 0-.82 1.87 23 23 0 0 0-1 3.73 8.65 8.65 0 0 0-.16 1h-1.55zm-1.21-1.55a.68.68 0 0 0 .21.49.67.67 0 0 0 .49.22.72.72 0 0 0 .51-.21.66.66 0 0 0 .22-.5.7.7 0 0 0-.21-.52.72.72 0 0 0-.52-.21.66.66 0 0 0-.5.22.72.72 0 0 0-.19.48zM206.32 15.08a.6.6 0 0 0 .51-.24.89.89 0 0 0 .16-.56V6.89h1.57v7.63a1.92 1.92 0 0 1-.37 1.19 1.71 1.71 0 0 1-1.45.55h-5.86v-1.18h.63v-1.59a2.34 2.34 0 0 1 .37-1.4 1.65 1.65 0 0 1 1.08-.71 2.17 2.17 0 0 1-1.56-.57 2 2 0 0 1-.6-1.53 2.3 2.3 0 0 1 .91-1.92 3.33 3.33 0 0 1 2.08-.63 2.08 2.08 0 0 1 1.35.42 1.57 1.57 0 0 1 .55 1.28 1.43 1.43 0 0 1-.64 1.31 1.74 1.74 0 0 1-.94.26 1.36 1.36 0 0 1-1.46-.84 1.54 1.54 0 0 1-.1-.55 1.05 1.05 0 0 1 0-.37q-.21 0-.37.35a1.18 1.18 0 0 0-.14.52q0 1.38 1.63 1.61a7.29 7.29 0 0 0 1.06.08h.69v1.07h-.73a1.68 1.68 0 0 0-1.14.34 1.57 1.57 0 0 0-.49 1.23v1.65zm-3-6.64a.67.67 0 0 0 .22.51.72.72 0 0 0 1 0 .68.68 0 0 0 .22-.5.63.63 0 0 0-.73-.71.72.72 0 0 0-.51.21.67.67 0 0 0-.15.49z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                ไทย
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 hFnQiR">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/thai/institutional-49281839"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ทำไมคุณจึงไว้วางใจ บีบีซี นิวส์ ได้
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/thai/institutional-38403477"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    เงื่อนไขการใช้งานของ BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/thai/institutional-38403476"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    เกี่ยวกับบีบีซี
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/thai/institutional-38497681"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    นโยบายความเป็นส่วนตัว
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cookies
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/thai/institutional-37981748"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ติดต่อบีบีซี
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 บีบีซี. บีบีซีไม่มีส่วนรับผิดชอบต่อเนื้อหาของเว็บไซต์ภายนอก.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  นโยบายของเราเรื่องการเชื่อมต่อไปยังลิงก์ภายนอก.
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`Snapshot test for /thai/23122810 For the Canonical platform I can see the server-rendered HTML 1`] = `
<html lang="th"
      class="no-js"
      dir="ltr"
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News ไทย"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News ไทย"
    >
    <meta data-react-helmet="true"
          name="description"
          content="Summary text about our interview with an American"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="Summary text about our interview with an American"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="http://ichef.test.bbci.co.uk/news/1024/branded_thai/F3F5/test/_63535426_p019wch0.jpg"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="summary text"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="th-TH"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News ไทย"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="We do not know the length of it - BBC News ไทย"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/thai/23122810"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbc_thailand"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="Summary text about our interview with an American"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="summary text"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="http://ichef.test.bbci.co.uk/news/1024/branded_thai/F3F5/test/_63535426_p019wch0.jpg"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbc_thailand"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="We do not know the length of it - BBC News ไทย"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2017-05-04T13:21:23.000Z"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2017-05-04T13:21:23.000Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      We do not know the length of it - BBC News ไทย
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/thai/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/thai/23122810"
    >
    <link data-react-helmet="true"
          rel="alternate"
          href="http://localhost:7080/thai/23122810"
          hreflang="th"
    >
    <link data-react-helmet="true"
          rel="amphtml"
          href="http://localhost:7080/thai/23122810.amp"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/thai/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/thai/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/thai/23122810","publisher":{"@type":"NewsMediaOrganization","name":"BBC News ไทย","publishingPrinciples":"https://www.bbc.com/thai/institutional-49281839","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/thai.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/thai.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/thai.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/thai/23122810","name":"We do not know the length of it"},"headline":"We do not know the length of it","datePublished":"2017-05-04T13:21:23.000Z","dateModified":"2017-05-04T13:21:23.000Z","author":{"@type":"NewsMediaOrganization","name":"BBC News ไทย","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/thai.png"},"noBylinesPolicy":"https://www.bbc.com/thai/institutional-49281839#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"AudioObject","name":"short headline","description":"long headline","duration":null,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg","uploadDate":"1970-01-01T00:00:00.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/cps/thai/23122810/p019wcgf/th"}
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/thai"
               class="StyledLink-m3awbo-2 fRVPol"
            >
              <svg height="24"
                   viewbox="0 0 210 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fkvflj"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M186.72 2.18v11a1.69 1.69 0 0 1 .47-.05 1.6 1.6 0 0 1 1.16.46 1.53 1.53 0 0 1 .48 1.14 1.56 1.56 0 0 1-.41 1.1 1.6 1.6 0 0 1-1.07.51 1.36 1.36 0 0 1-.35 0 1.65 1.65 0 0 1-1.29-.55 2 2 0 0 1-.53-1.4V2.18a2.38 2.38 0 0 0-.08-.44.42.42 0 0 0-.3-.14q-.22 0-.47.4a6.07 6.07 0 0 0-.58 1.22l-.18.5h-.92a3.16 3.16 0 0 0-.38-1.46 1.27 1.27 0 0 0-.94-.66l.52-1.36a1.22 1.22 0 0 1 .88.61 3.59 3.59 0 0 1 .45 1.39 4.66 4.66 0 0 1 .65-1.11 1.56 1.56 0 0 1 1-.71h.37a1.41 1.41 0 0 1 1.17.56 2 2 0 0 1 .35 1.2zm1.19 12.58a.68.68 0 0 0-.22-.51.71.71 0 0 0-.51-.21.68.68 0 0 0-.5.21.69.69 0 0 0-.21.5.7.7 0 0 0 .21.51.67.67 0 0 0 .5.22.7.7 0 0 0 .51-.21.69.69 0 0 0 .22-.51zM191.67 10h-.51a1.51 1.51 0 0 1-1.16-.45 1.55 1.55 0 0 1-.46-1.13 1.74 1.74 0 0 1 .33-1 1.25 1.25 0 0 1 .87-.59h.55a1.78 1.78 0 0 1 1.41.57 2 2 0 0 1 .47 1.36v2.15l-.17 1.34.24-.79q0-.16.43-1.12a11.19 11.19 0 0 1 1.48-2.79 3.32 3.32 0 0 1 .55-.55 1.14 1.14 0 0 1 .7-.19 2 2 0 0 1 1.59.68 2.39 2.39 0 0 1 .58 1.65v7.16H197V9q0-.77-.69-.75-.35 0-1.09 1.5a19.71 19.71 0 0 0-.82 1.87 23 23 0 0 0-1 3.73 8.65 8.65 0 0 0-.16 1h-1.55zm-1.21-1.55a.68.68 0 0 0 .21.49.67.67 0 0 0 .49.22.72.72 0 0 0 .51-.21.66.66 0 0 0 .22-.5.7.7 0 0 0-.21-.52.72.72 0 0 0-.52-.21.66.66 0 0 0-.5.22.72.72 0 0 0-.19.48zM206.32 15.08a.6.6 0 0 0 .51-.24.89.89 0 0 0 .16-.56V6.89h1.57v7.63a1.92 1.92 0 0 1-.37 1.19 1.71 1.71 0 0 1-1.45.55h-5.86v-1.18h.63v-1.59a2.34 2.34 0 0 1 .37-1.4 1.65 1.65 0 0 1 1.08-.71 2.17 2.17 0 0 1-1.56-.57 2 2 0 0 1-.6-1.53 2.3 2.3 0 0 1 .91-1.92 3.33 3.33 0 0 1 2.08-.63 2.08 2.08 0 0 1 1.35.42 1.57 1.57 0 0 1 .55 1.28 1.43 1.43 0 0 1-.64 1.31 1.74 1.74 0 0 1-.94.26 1.36 1.36 0 0 1-1.46-.84 1.54 1.54 0 0 1-.1-.55 1.05 1.05 0 0 1 0-.37q-.21 0-.37.35a1.18 1.18 0 0 0-.14.52q0 1.38 1.63 1.61a7.29 7.29 0 0 0 1.06.08h.69v1.07h-.73a1.68 1.68 0 0 0-1.14.34 1.57 1.57 0 0 0-.49 1.23v1.65zm-3-6.64a.67.67 0 0 0 .22.51.72.72 0 0 0 1 0 .68.68 0 0 0 .22-.5.63.63 0 0 0-.73-.71.72.72 0 0 0-.51.21.67.67 0 0 0-.15.49z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                ไทย
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 icaRnC"
            >
              ข้ามไปยังเนื้อหา
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             class="StyledNav-sc-158x7z5-5 dWucaK"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <div class="ScrollableWrapper-t4argr-0 UDeIc">
              <button type="button"
                      aria-expanded="false"
                      dir="ltr"
                      class="MenuButton-ukxuly-6 kFmrTl"
              >
                <svg focusable="false"
                     width="2.75rem"
                     height="2.75rem"
                     viewbox="0 0 44 44"
                     aria-hidden="true"
                     class="MenuIcon-sc-1nq0eki-0 gKIQph"
                >
                  <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                  </path>
                </svg>
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  หมวดข่าว
                </span>
              </button>
              <div dir="ltr"
                   class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz"
              >
                <ul role="list"
                    class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
                >
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/thai"
                       class="StyledLink-sc-158x7z5-2 gizuhH"
                    >
                      หน้าแรก
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/thai/topics/1ed75fd4-f992-46db-9859-fb5a7c95da91"
                       class="StyledLink-sc-158x7z5-2 gizuhH"
                    >
                      ประเทศไทย
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/thai/international"
                       class="StyledLink-sc-158x7z5-2 gizuhH"
                    >
                      ต่างประเทศ
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/thai/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                       class="StyledLink-sc-158x7z5-2 gizuhH"
                    >
                      วิทยาศาสตร์
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/thai/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2"
                       class="StyledLink-sc-158x7z5-2 gizuhH"
                    >
                      สุขภาพ
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/thai/media/video"
                       class="StyledLink-sc-158x7z5-2 gizuhH"
                    >
                      วิดีโอ
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/thai/popular/read"
                       class="StyledLink-sc-158x7z5-2 gizuhH"
                    >
                      ยอดนิยม
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div height="0"
                 class="StyledDropdown-ukxuly-0 NlGZD"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    หน้าแรก
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/topics/1ed75fd4-f992-46db-9859-fb5a7c95da91"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    ประเทศไทย
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/international"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    ต่างประเทศ
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    วิทยาศาสตร์
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    สุขภาพ
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/media/video"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    วิดีโอ
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/thai/popular/read"
                     class="StyledDropdownLink-ukxuly-4 wpXgz"
                  >
                    ยอดนิยม
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <noscript>
        <img height="1px"
             width="1px"
             alt
             style="position:absolute"
             src="https://logws1363.ati-host.net?s=598343&amp;s2=90&amp;p=thai.media_asset.23122810.page&amp;x1=[urn:bbc:cps:98300274-552b-364d-863b-e123d2236878]&amp;x2=[responsive]&amp;x3=[news-thai]&amp;x4=[th]&amp;x7=[article-media-asset]&amp;x8=[simorgh-nojs]&amp;x9=[We+do+not+know+the+length+of+it+-+BBC+News+ไทย]&amp;x11=[2017-05-04T13:21:23.000Z]&amp;x12=[2017-05-04T13:21:23.000Z]"
        >
      </noscript>
      <main role="main"
            class="GridWrapper-sc-12lwanc-0 StyledGrid-oo43dv-0 jHslwF"
      >
        <h1 id="content"
            tabindex="-1"
            class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
        >
          We do not know the length of it
        </h1>
        <div class="GridItemConstrainedLarge-sc-12lwanc-4 Wrapper-sc-7tc6v2-0 kvwPKI">
          <figure class="Figure-sc-6a3dhy-0 gJUCFc">
            <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
              <iframe src="https://polling.test.bbc.co.uk/ws/av-embeds/cps/thai/23122810/p019wcgf/th"
                      title="มีเดีย เพลเยอร์"
                      allow="autoplay; fullscreen"
                      scrolling="no"
                      allowfullscreen
                      class="StyledIframe-fuo2ed-0 dIyDYU"
              >
              </iframe>
              <noscript>
                <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                  <img srcset="https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg 800w"
                       alt
                       src="https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg"
                       aria-hidden="true"
                       class="StyledImg-sc-7vx2mr-0 hIxkbt"
                  >
                  <div class="MessageWrapper-sc-1pnftlt-1 dCjMrs">
                    <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                      อุปกรณ์ของท่านไม่สามารถใช้งานเครื่องเล่นสื่อได้
                    </strong>
                  </div>
                </div>
              </noscript>
            </div>
          </figure>
        </div>
        <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
          <strong aria-hidden="true"
                  class="Headline-sc-1kh1qhu-0 denghk StyledFauxHeadline-sc-15zvetq-0 jJBkMr"
          >
            We do not know the length of it
          </strong>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi StyledTimestamp-oo43dv-1 jqCfrG">
          <time datetime="2017-05-04"
                class="StyledTimestamp-um718p-0 eUpvhV"
          >
            4 พฤษภาคม 2017
          </time>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 jjizJv">
            Plain Text Paragraph
          </p>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/thai"
               class="StyledLink-m3awbo-2 fRVPol"
            >
              <svg height="24"
                   viewbox="0 0 210 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fkvflj"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M186.72 2.18v11a1.69 1.69 0 0 1 .47-.05 1.6 1.6 0 0 1 1.16.46 1.53 1.53 0 0 1 .48 1.14 1.56 1.56 0 0 1-.41 1.1 1.6 1.6 0 0 1-1.07.51 1.36 1.36 0 0 1-.35 0 1.65 1.65 0 0 1-1.29-.55 2 2 0 0 1-.53-1.4V2.18a2.38 2.38 0 0 0-.08-.44.42.42 0 0 0-.3-.14q-.22 0-.47.4a6.07 6.07 0 0 0-.58 1.22l-.18.5h-.92a3.16 3.16 0 0 0-.38-1.46 1.27 1.27 0 0 0-.94-.66l.52-1.36a1.22 1.22 0 0 1 .88.61 3.59 3.59 0 0 1 .45 1.39 4.66 4.66 0 0 1 .65-1.11 1.56 1.56 0 0 1 1-.71h.37a1.41 1.41 0 0 1 1.17.56 2 2 0 0 1 .35 1.2zm1.19 12.58a.68.68 0 0 0-.22-.51.71.71 0 0 0-.51-.21.68.68 0 0 0-.5.21.69.69 0 0 0-.21.5.7.7 0 0 0 .21.51.67.67 0 0 0 .5.22.7.7 0 0 0 .51-.21.69.69 0 0 0 .22-.51zM191.67 10h-.51a1.51 1.51 0 0 1-1.16-.45 1.55 1.55 0 0 1-.46-1.13 1.74 1.74 0 0 1 .33-1 1.25 1.25 0 0 1 .87-.59h.55a1.78 1.78 0 0 1 1.41.57 2 2 0 0 1 .47 1.36v2.15l-.17 1.34.24-.79q0-.16.43-1.12a11.19 11.19 0 0 1 1.48-2.79 3.32 3.32 0 0 1 .55-.55 1.14 1.14 0 0 1 .7-.19 2 2 0 0 1 1.59.68 2.39 2.39 0 0 1 .58 1.65v7.16H197V9q0-.77-.69-.75-.35 0-1.09 1.5a19.71 19.71 0 0 0-.82 1.87 23 23 0 0 0-1 3.73 8.65 8.65 0 0 0-.16 1h-1.55zm-1.21-1.55a.68.68 0 0 0 .21.49.67.67 0 0 0 .49.22.72.72 0 0 0 .51-.21.66.66 0 0 0 .22-.5.7.7 0 0 0-.21-.52.72.72 0 0 0-.52-.21.66.66 0 0 0-.5.22.72.72 0 0 0-.19.48zM206.32 15.08a.6.6 0 0 0 .51-.24.89.89 0 0 0 .16-.56V6.89h1.57v7.63a1.92 1.92 0 0 1-.37 1.19 1.71 1.71 0 0 1-1.45.55h-5.86v-1.18h.63v-1.59a2.34 2.34 0 0 1 .37-1.4 1.65 1.65 0 0 1 1.08-.71 2.17 2.17 0 0 1-1.56-.57 2 2 0 0 1-.6-1.53 2.3 2.3 0 0 1 .91-1.92 3.33 3.33 0 0 1 2.08-.63 2.08 2.08 0 0 1 1.35.42 1.57 1.57 0 0 1 .55 1.28 1.43 1.43 0 0 1-.64 1.31 1.74 1.74 0 0 1-.94.26 1.36 1.36 0 0 1-1.46-.84 1.54 1.54 0 0 1-.1-.55 1.05 1.05 0 0 1 0-.37q-.21 0-.37.35a1.18 1.18 0 0 0-.14.52q0 1.38 1.63 1.61a7.29 7.29 0 0 0 1.06.08h.69v1.07h-.73a1.68 1.68 0 0 0-1.14.34 1.57 1.57 0 0 0-.49 1.23v1.65zm-3-6.64a.67.67 0 0 0 .22.51.72.72 0 0 0 1 0 .68.68 0 0 0 .22-.5.63.63 0 0 0-.73-.71.72.72 0 0 0-.51.21.67.67 0 0 0-.15.49z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                ไทย
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 hFnQiR">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/thai/institutional-49281839"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ทำไมคุณจึงไว้วางใจ บีบีซี นิวส์ ได้
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/thai/institutional-38403477"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    เงื่อนไขการใช้งานของ BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/thai/institutional-38403476"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    เกี่ยวกับบีบีซี
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/thai/institutional-38497681"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    นโยบายความเป็นส่วนตัว
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cookies
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/thai/institutional-37981748"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ติดต่อบีบีซี
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 บีบีซี. บีบีซีไม่มีส่วนรับผิดชอบต่อเนื้อหาของเว็บไซต์ภายนอก.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  นโยบายของเราเรื่องการเชื่อมต่อไปยังลิงก์ภายนอก.
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
    <script>
      window.SIMORGH_DATA={"status":200,"pageData":{"metadata":{"firstPublished":1493904083000,"lastPublished":1493904083000,"lastUpdated":1557824964144,"id":"mock-id","locators":{"assetUri":"/thai/23122810","cpsUrn":"urn:bbc:content:assetUri:thai/23122810","curie":"http://www.bbc.co.uk/asset/98300274-552b-364d-863b-e123d2236878"},"type":"MAP","createdBy":"thai-v6","language":"th","options":{"isIgorSeoTagsEnabled":false,"includeComments":false,"allowRightHandSide":true,"isFactCheck":false,"allowDateStamp":true,"hasNewsTracker":false,"allowRelatedStoriesBox":true,"isKeyContent":false,"allowHeadline":true,"isBreakingNews":false,"allowPrintingSharingLinks":true},"analyticsLabels":{"cps_asset_type":"map","counterName":"thai.media_asset.23122810.page","cps_asset_id":"23122810"},"tags":{},"version":"v1.0.7","blockTypes":["media","paragraph"],"includeComments":false},"content":{"model":{"blocks":[{"model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"We do not know the length of it","blocks":[{"type":"fragment","model":{"text":"We do not know the length of it","attributes":[]},"id":"mock-id","position":[1,1,1,1]}]},"id":"mock-id","position":[1,1,1]}]},"id":"mock-id","position":[1,1]}]},"type":"visuallyHiddenHeadline","id":"mock-id","position":[1]},{"type":"video","model":{"locator":"urn:bbc:pips:pid:p019wcgc","blocks":[{"type":"aresMedia","model":{"blocks":[{"type":"aresMediaMetadata","blockId":"urn:bbc:ares::clip:p019wcgc","model":{"advertising":false,"embedding":true,"format":"audio","id":"mock-id","imageUrl":"ichef.test.bbci.co.uk/images/ic/$recipe/p019wch0.jpg","subType":"clip","synopses":{"short":"long headline","medium":"summary text"},"title":"short headline","versions":[{"versionId":"p019wcgf","types":["Original"],"duration":26,"warnings":{},"availableTerritories":{"uk":true,"nonUk":true}}],"available":true},"id":"mock-id","position":[2,1,1]},{"type":"image","model":{"blocks":[{"type":"rawImage","model":{"locator":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p019wch0.jpg","originCode":"pips"},"id":"mock-id","position":[2,1,2,1]}]},"id":"mock-id","position":[2,1,2]}]},"id":"mock-id","position":[2,1]}]},"id":"mock-id","position":[2]},{"model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"We do not know the length of it","blocks":[{"type":"fragment","model":{"text":"We do not know the length of it","attributes":[]},"id":"mock-id","position":[3,1,1,1]}]},"id":"mock-id","position":[3,1,1]}]},"id":"mock-id","position":[3,1]}]},"type":"fauxHeadline","id":"mock-id","position":[3]},{"type":"timestamp","model":{"firstPublished":1493904083000,"lastPublished":1493904083000},"id":"mock-id","position":[4]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Plain Text Paragraph","blocks":[{"type":"fragment","model":{"text":"Plain Text Paragraph","attributes":[]},"id":"mock-id","position":[5,1,1]}]},"id":"mock-id","position":[5,1]}]},"id":"mock-id","position":[5]}]}},"promo":{"headlines":{"shortHeadline":"Interview with an American","headline":"We do not know the length of it"},"locators":{"assetUri":"/thai/23122810","cpsUrn":"urn:bbc:content:assetUri:thai/23122810","curie":"http://www.bbc.co.uk/asset/98300274-552b-364d-863b-e123d2236878"},"summary":"Summary text about our interview with an American","timestamp":1557824964144,"passport":{},"media":{"id":"mock-id","subType":"clip","format":"audio","title":"short headline","synopses":{"short":"long headline","medium":"summary text"},"imageUrl":"ichef.test.bbci.co.uk/images/ic/$recipe/p019wch0.jpg","embedding":true,"advertising":false,"caption":"long headline","versions":[{"versionId":"p019wcgf","types":["Original"],"duration":26,"warnings":{},"availableTerritories":{"uk":true,"nonUk":true}}],"type":"media"},"indexImage":{"id":"mock-id","subType":"index","href":"http://b.files.bbci.co.uk/F3F5/test/_63535426_p019wch0.jpg","path":"/cpsdevpb/F3F5/test/_63535426_p019wch0.jpg","height":549,"width":976,"altText":"summary text","copyrightHolder":"AFP","type":"image"},"id":"mock-id","type":"cps"},"relatedContent":{"section":{"subType":"index","name":"หน้าแรก","uri":"/thai/front_page","type":"simple"},"site":{"subType":"site","name":"บีบีซีไทย","uri":"/thai","type":"simple"},"groups":[]}},"path":"/thai/23122810","timeOnServer": "mock-time"}
    </script>
    <div>
      <!--[if !IE]><!-->
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="text/javascript"
            crossorigin="anonymous"
            defer
    >
      [39]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-253ae210.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-0f485567.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-1f20a385.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-678f84af.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-10e2e882.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-d0ae3f07.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-f71cff67.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="thai"
            src="http://localhost:7080/static/js/thai-31ecd969.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <div>
    </div>
    <script type="text/javascript">
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
